Fix th vertical-align rule

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,7 +16,7 @@ footer {
     line-height: 3.25rem;
 }
 
-th {
+.table th {
     vertical-align: bottom;
 }
 
